--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,10 @@
                                 <a class="nav-link" href="{{ path('app_admin') }}">Utilisateurs</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin_orders') }}">Others</a>
+                                <a class="nav-link" href="{{ path('app_admin_orders') }}">Orders</a>
+                            </li>
+                             <li class="nav-item">
+                                <a class="nav-link" href="{{ path('admin_dashboard') }}">Dashboard</a>
                             </li>
                         </ul>
                         {% if app.user %}
