--- a/templates/show_user/index.html.twig
+++ b/templates/show_user/index.html.twig
@@ -4,6 +4,18 @@
     <div class="container">
         <h1 class="mt-4">Admin Panel</h1>
 
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success mt-4">
+                {{ message }}
+            </div>
+        {% endfor %}
+
+        {% for message in app.flashes('error') %}
+            <div class="alert alert-danger mt-4">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         <table class="table table-striped">
             <thead>
                 <tr>
