--- a/templates/product_edit/index.html.twig
+++ b/templates/product_edit/index.html.twig
@@ -1,41 +1,51 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container mt-4">
-        <h1 class="mb-4">{{ product.id ? 'Modifier le produit' : 'Ajouter un nouveau produit' }}</h1>
+	<div class="container mt-4">
+		<h1 class="mb-4">{{ product.id ? 'Modifier le produit' : 'Ajouter un nouveau produit' }}</h1>
 
-        {{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
-            <div class="mb-3">
-                {{ form_label(form.name, null, {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.name) }}
-            </div>
+		{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
+		<div class="mb-3">
+			{{ form_label(form.name, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.name) }}
+		</div>
 
-            <div class="mb-3">
-                {{ form_label(form.price, null, {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.price, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.price) }}
-            </div>
+		<div class="mb-3">
+			{{ form_label(form.price, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.price, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.price) }}
+		</div>
 
-            <div class="mb-3">
-                {{ form_label(form.description, null, {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
-                {{ form_errors(form.description) }}
-            </div>
+		<div class="mb-3">
+			{{ form_label(form.description, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.description) }}
+		</div>
 
-            <div class="mb-3">
-                {{ form_label(form.status, null, {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.status, {'attr': {'class': 'form-select'}}) }}
-                {{ form_errors(form.status) }}
-            </div>
+		<div class="mb-3">
+			{{ form_label(form.status, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.status, {'attr': {'class': 'form-select'}}) }}
+			{{ form_errors(form.status) }}
+		</div>
+		<div class="mb-3">
+			{{ form_label(form.category, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.category, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.category) }}
+		</div>
+		<div class="mb-3">
+			{{ form_label(form.stock, null, {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.stock, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.stock) }}
+		</div>
 
-            <div class="mt-3">
-                <button class="btn btn-primary">{{ product.id ? 'Modifier' : 'Ajouter' }}</button>
-            </div>
-        {{ form_end(form) }}
+		<div class="mt-3">
+			<button class="btn btn-primary">{{ product.id ? 'Modifier' : 'Ajouter' }}</button>
+		</div>
+		{{ form_end(form) }}
 
-        <div class="mt-3">
-            <a href="{{ path('app_admin_products') }}" class="btn btn-secondary">Retour à la liste des produits</a>
-        </div>
-    </div>
+		<div class="mt-3">
+			<a href="{{ path('app_admin_products') }}" class="btn btn-secondary">Retour à la liste des produits</a>
+		</div>
+	</div>
 {% endblock %}
