--- a/templates/show_product/index.html.twig
+++ b/templates/show_product/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
+	<div class="container mt-4">
 		{% for message in app.flashes('success') %}
 			<div class="alert alert-success">
 				{{ message }}
@@ -14,36 +14,36 @@
 			</div>
 		{% endfor %}
 
-		<h1 class="mt-4">{{ 'admin_panel.products'|trans }}</h1>
+		<h1 class="mt-4 text-center">{{ 'admin_panel.products'|trans }}</h1>
 		<div class="mb-3">
 			<a href="{{ path('app_product_add') }}" class="btn btn-primary">{{ 'add_new_product'|trans }}</a>
 		</div>
 
-		<table class="table table-striped" id="show-product" style="border: 2px solid black; border-collapse: collapse;">
-			<thead>
+		<table class="table table-striped table-bordered">
+			<thead class="thead-dark">
 				<tr>
-					<th style="border: none;">{{ 'ID'|trans }}</th>
-					<th style="border: none;">{{ 'name'|trans }}</th>
-					<th style="border: none;">{{ 'price'|trans }}</th>
-					<th style="border: none;">{{ 'description'|trans }}</th>
-					<th style="border: none;">{{ 'stock'|trans }}</th>
-					<th style="border: none;">{{ 'status'|trans }}</th>
-                    <th style="border: none;">{{ 'category'|trans }}</th>
-					<th style="border: none;">{{ 'actions'|trans }}</th>
+					<th>{{ 'ID'|trans }}</th>
+					<th>{{ 'name'|trans }}</th>
+					<th>{{ 'price'|trans }}</th>
+					<th>{{ 'description'|trans }}</th>
+					<th>{{ 'stock'|trans }}</th>
+					<th>{{ 'status'|trans }}</th>
+                    <th>{{ 'category'|trans }}</th>
+					<th>{{ 'actions'|trans }}</th>
 				</tr>
 			</thead>
 			<tbody>
 				{% for product in pagination %}
 					<tr>
-						<td style="border: none;">{{ product.id }}</td>
-						<td style="border: none;">{{ product.name }}</td>
-						<td style="border: none;">{{ product.price }}</td>
-						<td style="border: none;">{{ product.description }}</td>
-						<td style="border: none;">{{ product.stock }}</td>
-						<td style="border: none;">{{ product.status.toString() }}</td>
-                        <td style="border: none;">{{ product.category.name }}</td>
+						<td>{{ product.id }}</td>
+						<td>{{ product.name }}</td>
+						<td>{{ product.price }} €</td>
+						<td>{{ product.description }}</td>
+						<td>{{ product.stock }}</td>
+						<td>{{ product.status.toString() }}</td>
+                        <td>{{ product.category.name }}</td>
 
-						<td style="border: none;">
+						<td>
 							<a href="{{ path('app_product_edit', { id: product.id }) }}" class="btn btn-warning btn-sm">{{ 'edit'|trans }}</a>
 							<form action="{{ path('app_product_delete', { id: product.id }) }}" method="post" style="display:inline;">
 								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
@@ -53,13 +53,13 @@
 					</tr>
 				{% else %}
 					<tr>
-						<td colspan="6" class="text-center">{{ 'no_products_found'|trans }}</td>
+						<td colspan="8" class="text-center">{{ 'no_products_found'|trans }}</td>
 					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
 
-		<div class="mt-3">
+		<div class="mt-3 d-flex justify-content-center">
 			{{ knp_pagination_render(pagination) }}
 		</div>
 	</div>
