--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{{ 'welcome' | trans }}{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         {% block stylesheets %}
@@ -19,23 +20,23 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
-                    <a class="navbar-brand" href="{{ path('home') }}">Anime Pop Up</a>
+                    <a class="navbar-brand" href="{{ path('home') }}">{{ 'welcome' | trans }}</a>
                     <div class="collapse navbar-collapse justify-content-center">
                         <ul class="navbar-nav mx-3"> 
                           <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_product_index') }}">Boutique</a>
+                                <a class="nav-link" href="{{ path('app_product_index') }}">{{ 'boutique' | trans }}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin_products') }}">Produits</a>
+                                <a class="nav-link" href="{{ path('app_admin_products') }}">{{ 'produits' | trans }}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin') }}">Utilisateurs</a>
+                                <a class="nav-link" href="{{ path('app_admin') }}">{{ 'utilisateurs' | trans }}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('app_admin_orders') }}">Orders</a>
+                                <a class="nav-link" href="{{ path('app_admin_orders') }}">{{ 'orders' | trans }}</a>
                             </li>
                              <li class="nav-item">
-                                <a class="nav-link" href="{{ path('admin_dashboard') }}">Dashboard</a>
+                                <a class="nav-link" href="{{ path('admin_dashboard') }}">{{ 'dashboard' | trans }}</a>
                             </li>
                         </ul>
                         {% if app.user %}
@@ -44,7 +45,7 @@
                                     {{ app.user.firstname }} {{ app.user.lastname }}
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
-                                    <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_logout') }}">{{ 'logout' | trans }}</a></li>
                                 </ul>
                             </div>
                         {% endif %}
