--- a/templates/product_edit/index.html.twig
+++ b/templates/product_edit/index.html.twig
@@ -2,7 +2,9 @@
 
 {% block body %}
 	<div class="container mt-4">
-		<h1 class="mb-4">{{ product.id ? 'Modifier le produit' : 'Ajouter un nouveau produit' }}</h1>
+		<h1 class="mb-4">
+			{{ product.id ? 'product.edit'|trans : 'product.add'|trans }}
+		</h1>
 
 		{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
 		<div class="mb-3">
@@ -40,12 +42,14 @@
 		</div>
 
 		<div class="mt-3">
-			<button class="btn btn-primary">{{ product.id ? 'Modifier' : 'Ajouter' }}</button>
+			<button class="btn btn-primary">
+				{{ product.id ? 'product.submit'|trans : 'product.submit_add'|trans }}
+			</button>
 		</div>
 		{{ form_end(form) }}
 
 		<div class="mt-3">
-			<a href="{{ path('app_admin_products') }}" class="btn btn-secondary">Retour à la liste des produits</a>
+			<a href="{{ path('app_admin_products') }}" class="btn btn-secondary">{{ 'product.back_to_list'|trans }}</a>
 		</div>
 	</div>
 {% endblock %}
