--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <h1 class="h3 mb-4 text-center">Register</h1>
+                <h1 class="h3 mb-4 text-center">{{ 'register.title'|trans }}</h1>
 
                 {{ form_start(registrationForm, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate'}}) }}
 
@@ -33,16 +33,16 @@
                 </div>
 
                 <button class="btn btn-lg btn-primary w-100" type="submit">
-                    Register
+                    {{ 'register.submit'|trans }}
                 </button>
 
                 {{ form_end(registrationForm) }}
 
                 <!-- Lien vers la page de connexion -->
                 <div class="text-center mt-3">
-                    <span>Already have an account?</span>
+                    <span>{{ 'register.already_have_account'|trans }}</span>
                     <a href="{{ path('app_login') }}" class="btn btn-outline-secondary mt-2 w-100">
-                        Go to login
+                        {{ 'register.go_to_login'|trans }}
                     </a>
                 </div>
             </div>
