--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}{{ 'login.title'|trans }}{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <h1 class="h3 mb-4 font-weight-normal text-center">Please sign in</h1>
+                <h1 class="h3 mb-4 font-weight-normal text-center">{{ 'login.sign_in'|trans }}</h1>
 
                 {% if error %}
                     <div class="alert alert-danger" role="alert">
@@ -16,39 +16,39 @@
 
                 {% if app.user %}
                     <div class="alert alert-info text-center">
-                        You are logged in as <strong>{{ app.user.userIdentifier }}</strong>, 
-                        <a href="{{ path('app_logout') }}" class="btn btn-link">Logout</a>
+                        {{ 'login.logged_in_as'|trans }} <strong>{{ app.user.userIdentifier }}</strong>, 
+                        <a href="{{ path('app_logout') }}" class="btn btn-link">{{ 'login.logout'|trans }}</a>
                     </div>
                 {% endif %}
 
                 <form method="post" class="needs-validation" novalidate>
                     <div class="mb-3">
-                        <label for="username" class="form-label">Email</label>
+                        <label for="username" class="form-label">{{ 'login.email'|trans }}</label>
                         <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
                         <div class="invalid-feedback">
-                            Please enter a valid email address.
+                            {{ 'login.invalid_email'|trans }}
                         </div>
                     </div>
 
                     <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
+                        <label for="password" class="form-label">{{ 'login.password'|trans }}</label>
                         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
                         <div class="invalid-feedback">
-                            Please enter your password.
+                            {{ 'login.invalid_password'|trans }}
                         </div>
                     </div>
 
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
                     <button class="btn btn-lg btn-primary w-100" type="submit">
-                        Sign in
+                        {{ 'login.sign_in_button'|trans }}
                     </button>
                 </form>
 
                 <div class="text-center mt-3">
-                    <span>Don't have an account?</span>
+                    <span>{{ 'login.no_account'|trans }}</span>
                     <a href="{{ path('app_register') }}" class="btn btn-outline-secondary mt-2 w-100">
-                        Create an account
+                        {{ 'login.create_account'|trans }}
                     </a>
                 </div>
             </div>
